--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     
+    defaults:
+    run:
+      working-directory: descuentosTDD
+
     steps:
       # Paso 1: Clonar el repositorio
       - name: Checkout del código
